client/src/scss/main.scss
/* ... */
#transition-ring {
    opacity: 0;
    border-radius: 50%;
    position: absolute;
    width: 0;
    height: 0;
    z-index: 999;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background: rgba(0,0,0,0);
    border: 5px solid black;
    pointer-events: none;
}

#out-game-screen {
    z-index: 4;
    position: absolute;
    top: 0;
    left: 0;
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100%;
}


#game-over-screen {
    position: absolute;
    top: 0;
    left: 0;
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.4);
    z-index: 1000;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: white;
}

#canvas {
    z-index: 0;
    position: absolute;
    top: 0;
    left: 0;
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100%;
    pointer-events: all;
}

#hud {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    pointer-events: none;
}

#hud > * {
    pointer-events: auto;
}

#hud > .petal-column {
    position: absolute;
    bottom: 15px;
}

#hud > .petal-column.mobile{
    left: 1px;
    display: flex;
    align-items: start;
}

.equipped-petals-row {
    margin-top: 15px;
    display: flex;
}

.preparation-petals-row {
    margin-top: 8px;
    display: flex;
}

.petal {
    width: 100%;
    height: 100%;
    border-style: solid;
    border-width: 4.4px;
    border-radius: 3px;
    position: relative;
}

.dragging-petal {
    position: absolute;
    width: 50px;
    height: 50px;
    z-index: 9;
    pointer-events: none;
    transform-origin: center center;
}

.dragging-petal>.petal {
    top: -5px;
    left: -5px;
    cursor: pointer;
    border-width: 5px;
    transform: translate(-50%, -50%); /* Center the petal within the dragging container */
}

.petal-slot>.petal {
    top: -4px;
    left: -4px;
    cursor: pointer;
    pointer-events: all;
}

.equipped-petals-row>.petal-slot{
    --x: 13.2px;
    width: 55px;
    height: 55px;
}

.preparation-petals-row>.petal-slot{
    --x: 8.8px;
    width: 38.5px;
    height: 38.5px;
}

.petal-slot {
    position: relative;
    border-style: solid;
    border-width: 4.4px;
    border-radius: 3px;
    margin: 0 4px;
    opacity: 0.85;
    background: $none_bg;
    border-color: $none_bd;
}

.piece-petal {
    position: absolute;
    background-repeat: no-repeat;
    pointer-events: none;
}

[petalName]:before{
    content: attr(petalName);
    position: absolute;
    transform: translate(-50%, -50%);
    font-size: var(--x);
    top: 80%;
    left: var(--name-left, 50%);
    white-space: nowrap;
    -webkit-text-stroke: 1.65px #000;
}

[petalName]:after{
    content: attr(petalName);
    position: absolute;
    transform: translate(-50%, -50%);
    font-size: var(--x);
    color: white;
    top: 80%;
    white-space: nowrap;
    left: var(--name-left, 50%);
}

img {
    pointer-events: none;
}

#delete-petal {
    margin-left: 5px;
    opacity: 0.8;
    border-radius: 3px;
    width: 38.5px;
    height: 38.5px;
    background: #b7816d;
    border: #9a7661 4px solid;
}

.information {
    position: absolute;
    padding: 7px;
    transform: translate(-35%, -100%);
    background: rgba(0, 0, 0, 0.6);
    height: max-content;
    width: max-content;
    border-radius: 5px;
    color: white;
    z-index: 100;
}

.information > div {
    margin: 0.1em 0;
}

.information > div > p {
    margin: 0;
}

.information > p {
    margin: 0;
}

.preparation-petals-row > .selecting-petal > .petal {
    z-index: 2;
    width: 130%;
    height: 130%;
    top: -8px;
    left: -8px;
    --x: 13.2px;
    animation: shaking 1.6s infinite;
}

@keyframes shaking {
    0% {
        transform: rotate(0deg);
    }

    20% {
        transform: rotate(10deg);
    }

    50% {
        transform: rotate(0deg);
    }

    75% {
        transform: rotate(-10deg);
    }

    100% {
        transform: rotate(0deg);
    }
}

#move-high{
    position: absolute;
    background: rgba(#000, 0.5);
    top: 40%;
    left: 60%;
    width: 260px;
    height: 120px;
    border-radius: 6px;
    z-index: 6;
    color: white;
    display: flex;
    flex-direction: column;
    padding: 15px;
}

#floer-version {
    position: absolute;
    bottom: 5px;
    left: 5px;
    font-size: 25px;
    color: white;
    opacity: 0.5;
    z-index: 999;
}

#floer-logo {
    position: absolute;
    top: 10px;
    left: 10px;
    font-size: 30px;
    color: white;
    opacity: 0.5;
    z-index: 999;
}

#chat-box {
    position: absolute;
    left: 5px;
    bottom: 130px;
    &.mobile {
        bottom: 150px;
    }
}

#chat-input {
    width: 300px;
    height: 15px;
    font-size: 15px;
    background: rgba(0, 0, 0, 0.2);
    color: white;
    border: none;
    border-radius: 5px;
    outline: 0;
    padding: 6px;
}

input::placeholder {
    color: white;
}

#chat-input:focus {
    background: white;
    color: black;
    border: black solid 2px;
    padding: 5px;
}

#chat-channel {
    color: white;
    font-size: 15px;
    margin-right: 5px;
}

#chat-send {
    width: 350px;
    display: flex;
    align-items: center;
}

#chat-messages {
    min-width: 300px;
    max-width: 500px;
    max-height: 300px;
    overflow: hidden;
    pointer-events: none;
    display: flex;
    flex-direction: column;
    align-items: start;
    grid-gap: 3px;
    margin-bottom: 8px;
    padding-right: 5px;
}

.opened#chat-messages {
    overflow-y: auto;
    pointer-events: all;
}

.chat-message {
    color: white;
}

::-webkit-scrollbar-track-piece {
    display: none;
}

::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-thumb {
    background: rgba(0, 0, 0, 0.6);
    background-clip: padding-box;
}

#petal-gallery-contents {
    width: 350px;
    height: 400px;
    background: #e3a96d;
    overflow: auto;
    overflow-x: hidden;
    padding: 5px;
}
/* ... */

